--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "next": "^11.1.2",
+    "qrcode": "^1.4.4",
+    "qrcode-svg": "^1.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
