--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "qrcode": "^1.4.4",
     "qrcode-svg": "^1.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^7.0.1",
+    "rehype-raw": "^6.1.0"
   }
 }
