--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.1",
-    "rehype-raw": "^6.1.0"
+    "rehype-raw": "^6.1.0",
+    "sharp": "^0.30.1"
   }
 }
